ingress-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: test
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2025-01-14T10:36:02Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
  name: test-ingress
  namespace: default
  resourceVersion: "696"
  uid: 31707744-1d4e-45b3-98af-33f3269f5bba
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: test-nginx
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.5.15
